refactor: translating swagger to portuguese and using error middleware
